Added the PSD source files (should be interesting watching the rip-offs)

--- a/Readme.textile
+++ b/Readme.textile
@@ -17,5 +17,6 @@ The following directories and their contents are Copyright Tim Lucas. You may no
 
 * @/articles/@
 * @/public/images/@
+* @/design/@*
 
 All other directories and files are MIT Licensed.
