--- a/Readme.textile
+++ b/Readme.textile
@@ -17,6 +17,6 @@ The following directories and their contents are Copyright Tim Lucas. You may no
 
 * @/articles/@
 * @/public/images/@
-* @/design/@*
+* @/design/@
 
 All other directories and files are MIT Licensed.
