--- a/Readme.textile
+++ b/Readme.textile
@@ -1,25 +1,9 @@
-This is the source code that powers "toolmantim.com":http://toolmantim.com/. It's a simple Sinatra application serving up haml-based articles from disk.
+This is the source code that powers the old "toolmantim.com":http://toolmantim.com/. It's a Sinatra application serving up haml-based articles from disk.
 
-The idea is that you want publishing to be previewable, simple and versioned. You want to be able to tweak the appearance of your site as you produce more complex articles. You want to simply add an image to your site, not build a whole admin providing file uploads. The major downside (if it is indeed at all a downside) is to publish you need access to your repo so you can git commit and cap deploy, though I could imagine using github's web editing features to add articles and trigger a site update w/o touching a terminal.
-
-It's somewhat similar to "Marley":http://github.com/karmi/marley and other sintra-based blogging apps with the following big exceptions:
-
-* You can use any markup format thanks to HAML's filters (e.g. @:markdown@)
-* There is no commenting. This forces more quality feedback via email and other blog posts, forces you to properly integrate feedback into the article and avoids the maintenance headache of comment spam.
-
-At the moment I'm not entirely convinced there's anything worth extracting into a gem or OSS project. If anything maybe the @Article@ class so other people can create a sintra app, drop in the class/gem and fetch and sort haml-based articles from disk. Drop me a line with your thoughts.
-
-What does this mean for "Menki":http://github.com/toolmantim/menki? I'm not convinced you need a whole boiler-plate app to fork and customise ala "Enki":http://www.enkiblog.com/. If there's something to extract from this maybe that can become Menki? Again, open to your thoughts.
+The idea was that you want publishing to be previewable, simple and versioned. You want to be able to tweak the appearance of your site as you produce more complex articles. You want to simply add an image to your site, not build a whole admin providing file uploads. The major downside (if it is indeed at all a downside) is to publish you need access to your repo so you can git commit and cap deploy, though I could imagine using github's web editing features to add articles and trigger a site update w/o touching a terminal.
 
 h2. License
 
-The following files, directories and their contents are Copyright Tim Lucas. You may not reuse anything therein without my permission:
+Now that this is the old version of toolmantim.com everything (except the logo) is MIT licensed, layout, photoshop and all. Go wild!
 
-* @/articles/@
-* @/design/@
-* @/public/favicon.ico@
-* @/public/images/@
-* @/public/files/@
-* @/views/stylesheets/screen.sass@
-
-All other directories and files are MIT Licensed.
+The only file that you're not allowed to use is the logo. That might confuse people.
